@@ -39,3 +39,25 @@ _looped_real_category.key
 +.2e+1
 3
 4
+loop_
+_looped_imag_category.key
+2j
+2.0j
+2.00j
++.2E+1j
++.2e+1j
+3(1)j
+3.0(10)j
+3j
+4j
+loop_
+_looped_complex_category.key
+1+2j
+'1 + 2.0j'
+'1.00 + 2.00j'
+'1+.2E+1j'
+'1E+0+.2e+1j'
+'50(9) - 3(1)j'
+'50.0(90) - 3.0(10)j'
+'9+3j'
+'7 - 4j'
