@@ -9,11 +9,11 @@ data_FAKE_KEY_DIC
 
     _dictionary.title            FAKE_KEY_DIC
     _dictionary.class            Instance
-    _dictionary.version          0.0.1
-    _dictionary.date             2018-12-25
+    _dictionary.version          0.1.0
+    _dictionary.date             2021-10-28
     _dictionary.uri              http://www.fake.org/fake_key.dic
     _dictionary.ddl_conformance  3.11.10
-    _dictionary.namespace        FakeKeyDic
+    _dictionary.namespace        Test
     _description.text
 ;
     This dictionary contains fake definitions of looped categories with
@@ -23,7 +23,14 @@ data_FAKE_KEY_DIC
     _dictionary_audit.version
     _dictionary_audit.date
     _dictionary_audit.revision
-    0.0.1 2018-03-29 'Creating the dictionary'
+    0.0.1 2018-03-29
+;
+  Initial release of the dictionary.
+;
+    0.1.0 2021-10-28
+;
+  Added the LOOPED_IMAG_CATEGORY and LOOPED_COMPLEX_CATEGORY categories.
+;
 
 save_LOOP_PARENT
     _definition.id               LOOP_PARENT
@@ -317,6 +324,120 @@ save_looped_real_category.placeholder_content
      A placeholder data item.
 ;
     _name.category_id            looped_real_category
+    _name.object_id              placeholder_content
+    _type.purpose                Describe
+    _type.source                 Assigned
+    _type.container              Single
+    _type.contents               Text
+save_
+
+save_LOOPED_IMAG_CATEGORY
+    _definition.id               LOOPED_IMAG_CATEGORY
+    _definition.scope            Category
+    _definition.class            Loop
+    _definition.update           2021-10-28
+    _description.text
+;
+    A looped category that has a category key of the Imag type content.
+;
+    _name.category_id            LOOP_PARENT
+    _name.object_id              LOOPED_IMAG_CATEGORY
+    _category.key_id             '_looped_imag_category.key'
+    _category_key.name           '_looped_imag_category.key'
+save_
+
+save_looped_imag_category.key
+    _definition.id               '_looped_imag_category.key'
+    _definition.scope            Item
+    _definition.class            Attribute
+    _definition.update           2021-10-28
+    _description.text
+;
+     A key of the Imag type content.
+;
+    _description.common
+;
+     A key of the Imag type content.
+;
+    _name.category_id            looped_imag_category
+    _name.object_id              key
+    _type.purpose                Key
+    _type.source                 Assigned
+    _type.container              Single
+    _type.contents               Imag
+save_
+
+save_looped_imag_category.placeholder_content
+    _definition.id               '_looped_imag_category.placeholder_content'
+    _definition.scope            Item
+    _definition.class            Attribute
+    _definition.update           2021-10-28
+    _description.text
+;
+     A placeholder data item.
+;
+    _description.common
+;
+     A placeholder data item.
+;
+    _name.category_id            looped_imag_category
+    _name.object_id              placeholder_content
+    _type.purpose                Describe
+    _type.source                 Assigned
+    _type.container              Single
+    _type.contents               Text
+save_
+
+save_LOOPED_COMPLEX_CATEGORY
+    _definition.id               LOOPED_COMPLEX_CATEGORY
+    _definition.scope            Category
+    _definition.class            Loop
+    _definition.update           2021-10-28
+    _description.text
+;
+    A looped category that has a category key of the Complex type content.
+;
+    _name.category_id            LOOP_PARENT
+    _name.object_id              LOOPED_COMPLEX_CATEGORY
+    _category.key_id             '_looped_complex_category.key'
+    _category_key.name           '_looped_complex_category.key'
+save_
+
+save_looped_complex_category.key
+    _definition.id               '_looped_complex_category.key'
+    _definition.scope            Item
+    _definition.class            Attribute
+    _definition.update           2021-10-28
+    _description.text
+;
+     A key of the Complex type content.
+;
+    _description.common
+;
+     A key of the Complex type content.
+;
+    _name.category_id            looped_complex_category
+    _name.object_id              key
+    _type.purpose                Key
+    _type.source                 Assigned
+    _type.container              Single
+    _type.contents               Complex
+save_
+
+save_looped_complex_category.placeholder_content
+    _definition.id               '_looped_complex_category.placeholder_content'
+    _definition.scope            Item
+    _definition.class            Attribute
+    _definition.update           2021-10-28
+    _description.text
+;
+     A placeholder data item.
+;
+    _description.common
+;
+     A placeholder data item.
+;
+    _name.category_id            looped_complex_category
     _name.object_id              placeholder_content
     _type.purpose                Describe
     _type.source                 Assigned
