@@ -1,5 +1,9 @@
 scripts/ddlm_validate: tests/cases/ddlm_validate_044.inp data_looped_keys: NOTE, data item '_looped_code_category.key' acts as a loop key, but the associated data values are not unique -- value 'a' appears 2 times as ['a', 'A'].
 scripts/ddlm_validate: tests/cases/ddlm_validate_044.inp data_looped_keys: NOTE, data item '_looped_code_category.key' acts as a loop key, but the associated data values are not unique -- value 'aa' appears 2 times as ['aA', 'Aa'].
+scripts/ddlm_validate: tests/cases/ddlm_validate_044.inp data_looped_keys: NOTE, data item '_looped_complex_category.key' acts as a loop key, but the associated data values are not unique -- value '1+2j' appears 5 times as ['1+2j', '1 + 2.0j', '1.00 + 2.00j', '1+.2E+1j', '1E+0+.2e+1j'].
+scripts/ddlm_validate: tests/cases/ddlm_validate_044.inp data_looped_keys: NOTE, data item '_looped_complex_category.key' acts as a loop key, but the associated data values are not unique -- value '50(9)-3.0(10)j' appears 2 times as ['50(9) - 3(1)j', '50.0(90) - 3.0(10)j'].
+scripts/ddlm_validate: tests/cases/ddlm_validate_044.inp data_looped_keys: NOTE, data item '_looped_imag_category.key' acts as a loop key, but the associated data values are not unique -- value '2j' appears 5 times as ['2j', '2.0j', '2.00j', '+.2E+1j', '+.2e+1j'].
+scripts/ddlm_validate: tests/cases/ddlm_validate_044.inp data_looped_keys: NOTE, data item '_looped_imag_category.key' acts as a loop key, but the associated data values are not unique -- value '3.0(10)j' appears 2 times as ['3(1)j', '3.0(10)j'].
 scripts/ddlm_validate: tests/cases/ddlm_validate_044.inp data_looped_keys: NOTE, data item '_looped_index_category.key' acts as a loop key, but the associated data values are not unique -- value '1' appears 2 times as ['1'].
 scripts/ddlm_validate: tests/cases/ddlm_validate_044.inp data_looped_keys: NOTE, data item '_looped_index_category.key' acts as a loop key, but the associated data values are not unique -- value '2' appears 2 times as ['2'].
 scripts/ddlm_validate: tests/cases/ddlm_validate_044.inp data_looped_keys: NOTE, data item '_looped_name_category.key' acts as a loop key, but the associated data values are not unique -- value 'a' appears 2 times as ['a', 'A'].
