@@ -1,0 +1,5 @@
+'10+7j' -> '10+7j'
+'10 + 7j' -> '10+7j'
+'100(5) - 1.7j' -> '100(5)-1.7j'
+'10.0 - 5(1)j' -> '10-5.0(10)j'
+'10.15(1)+300.0(100)j' -> '10.150(10)+300(10)j'
