@@ -1,0 +1,4 @@
+'10' -> '10'
+'7j' -> '7j'
+'100(5) - -1j' -> '100(5) - -1j'
+'100 + 5.0(0.5)j' -> '100 + 5.0(0.5)j'
