@@ -1,0 +1,5 @@
+'7j' -> '7j'
+'+7j' -> '7j'
+'-1j' -> '-1j'
+'-5(3)j' -> '-5(3)j'
+'300.0(100)j' -> '300(10)j'
