@@ -1,0 +1,4 @@
+'10jj' -> '10jj'
+'7' -> '7'
+'-1j ' -> '-1j '
+'5.0(0.5)j' -> '5.0(5)j'
