@@ -13,6 +13,9 @@ cod-tools (unreleased)
   * Changed:
     - cif_molecule:
         - reworded several warning messages.
+    - COD::CIF::DDL::DDLm:
+        - improved the canonicalisation of 'Imag' and 'Complex'
+          DDLm content type values.
   * Fixed:
     - COD::CIF::Data:
         - ensured that warning messages in the get_sg_data() subroutine
@@ -20,8 +23,8 @@ cod-tools (unreleased)
     - COD::CIF::DDL::DDLm::Validate:
         - updated the check_su_eligibility() subroutine to properly handle
           the special case of the '_description_example.case' attribute.
-        - updated the handling of 'Imag' and 'Complex' data types to allow
-          standard uncertainties.
+        - updated the handling of 'Imag' and 'Complex' content types to
+          allow standard uncertainties.
 
 cod-tools (3.3.0)
 
